# mk70fn1m0_cmake_example

./: CMakeLists.txt  README.md  mk70f12.cmake  toolchain.cmake
